<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="prefNom"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <EditTextPreference
        android:capitalize="none"
        android:inputType="textPassword"
        android:key="prefPassword"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_password" />

    <EditTextPreference
        android:capitalize="none"
        android:defaultValue="@string/pref_default_url"
        android:inputType="textUri"
        android:key="prefUrl"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_url" />

    <ListPreference
        android:defaultValue="10"
        android:entries="@array/pref_list_articles"
        android:entryValues="@array/pref_nb_articles"
        android:key="prefNbArticles"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_nb_articles" />

</PreferenceScreen>
